--- a/myFlaskWebProject/templates/results.html
+++ b/myFlaskWebProject/templates/results.html
@@ -14,8 +14,9 @@
     <p>Here is my Temperature: {{ result.temperature }}</p>
     <p>Here is my ph-Value: {{ result.phVal }}</p>
     <p>Here is my Pressure: {{ result.pressure }}</p>
-    <p>Here is my Conductivity: {{ result.conductivity }}</p>
+    <p>Here is my Conductivity: {{ result.conductivity*100}}</p>
     <br />
+    gwethwttrhertheryhey
     {% endblock %}
 </body>
 </html>
