Add flask plugin for javascript with highchart

--- a/myFlaskWebProject/templates/layout.html
+++ b/myFlaskWebProject/templates/layout.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>mytubes - {{ title }}</title>
+    <script src="/static/scripts/jquery-1.10.2.js"></script>
+    <script src="/static/scripts/jquery-1.10.2.min.js"></script>
     <link rel="stylesheet" type="text/css" href="/static/content/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" href="/static/content/site.css" />
     <script src="/static/scripts/modernizr-2.6.2.js"></script>
@@ -38,8 +40,8 @@
         </footer>
     </div>
 
-    <script src="/static/scripts/jquery-1.10.2.js"></script>
     <script src="/static/scripts/bootstrap.js"></script>
+    <script type="text/javascript" src="/static/bootstrap.min.js"></script>
     <script src="/static/scripts/respond.js"></script>
     {% block scripts %}{% endblock %}
 
