--- a/myFlaskWebProject/templates/results.html
+++ b/myFlaskWebProject/templates/results.html
@@ -2,7 +2,8 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <title></title>
+    <title>Results</title>
+    <link rel="stylesheet" type="text/css" href="./static/content/highcharts_style.css">
 </head>
 <body>
     {% extends "layout.html" %}
@@ -15,7 +16,8 @@
     <p>Here is my Pressure: {{ result.pressure }}</p>
     <p>Here is my Conductivity: {{ result.conductivity*100}}</p>
     <br />
-    gwethwttrhertheryhey
+
+    Here I add javaScript code:
     {% endblock %}
 </body>
 </html>
