--- a/myFlaskWebProject/templates/summary.html
+++ b/myFlaskWebProject/templates/summary.html
@@ -22,7 +22,7 @@
         var tabledata = {{ sum |safe }}
         console.log(tabledata)
     </script>
-    <div id="example-table"></div>
+    <div id="summary-table"></div>
     <script src="../static/js/summarytable.js"></script>
 
     {% endblock %}
