--- a/myFlaskWebProject/templates/results.html
+++ b/myFlaskWebProject/templates/results.html
@@ -18,6 +18,9 @@
     <!-- conductivity chart -->
     <div style="margin-bottom:1cm;" id="conduc_chart"></div>
 
+    <!-- Live temp chart -->
+    <div style="margin-bottom:1cm;" id="data-container"></div>
+
     <script src="http://code.highcharts.com/highcharts.js"></script>
     <script>
         var temp_data = {{ temp_data }}
@@ -28,12 +31,12 @@
         console.log(ph_data)
         console.log(press_data)
         console.log(conduc_data)
-        drawChart(temp_data);
     </script>
     <script src="../static/js/tempchart.js" charset="utf-8"></script>
     <script src="../static/js/presschart.js" charset="utf-8"></script>
     <script src="../static/js/phchart.js" charset="utf-8"></script>
     <script src="../static/js/conducchart.js" charset="utf-8"></script>
+    <script src="../static/js/livetemp.js" charset="utf-8"></script>
 
     {% endblock %}
 </body>
