Add set and update functions for summary table to SQL_lib

--- a/myFlaskWebProject/templates/results.html
+++ b/myFlaskWebProject/templates/results.html
@@ -18,8 +18,8 @@
     <!-- conductivity chart -->
     <div style="margin-bottom:1cm;" id="conduc_chart"></div>
 
-    <!-- Live temp chart -->
-    <div style="margin-bottom:1cm;" id="data-container"></div>
+    <!-- Live temp chart
+    <div style="margin-bottom:1cm;" id="data-container"></div> -->
 
     <script src="http://code.highcharts.com/highcharts.js"></script>
     <script>
